# OOP-template

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Bullet.cpp  Bullet.h  CMakeLists.txt  Coin.cpp  Coin.h  CoinFactory.cpp  CoinFactory.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Gun.cpp  Gun.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  MovableException.cpp  MovableException.h  MovableObject.cpp  MovableObject.h  Object.cpp  Object.h  ObjectException.cpp  ObjectException.h  OutOfBoundsException.cpp  OutOfBoundsException.h  Player.cpp  Player.h  README.md  Statistics.cpp  Statistics.h  Wall.cpp  Wall.h  WallBuilder.cpp  WallBuilder.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  (+3 more)
.cmake/api/v1/reply/: cache-v2-064d01c4c54b2373da35.json  cmakeFiles-v1-a5d59b27bb67b01f6860.json  codemodel-v2-be2e973741201339dc3a.json  directory-.-Debug-7d801aa02a394c4ffb18.json  directory-.-MinSizeRel-2ce46594da91008cc111.json  directory-.-RelWithDebInfo-7b15b50d2f34b01ce1a0.json  directory-.-Release-e35e45a0f912ffe28da9.json  index-2024-03-11T19-18-37-0268.json  target-ALL_BUILD-RelWithDebInfo-ed1485906498419b02aa.json  target-ZERO_CHECK-RelWithDebInfo-f1618cf880f8801e848a.json  target-oop-Debug-337fac7aad4f42672143.json  target-oop-MinSizeRel-a9123a8905e00855a747.json  target-oop-RelWithDebInfo-33d53fd476b1a3a36b0b.json  target-oop-Release-03b772c95720d72a6745.json  toolchains-v1-b7b1d88b58749e931b8f.json
.github/workflows/: cmake.yml
